# french-typo

./: .gitignore  CHANGELOG.md  README.adoc  README.md  __init__.py  digest.txt  meta.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
format_anki_notes/: __init__.py  format_anki_notes.py  logger.py  main.py
format_anki_notes/browser/: format.py  menu.py
format_anki_notes/editor/: button.py  format.py
format_anki_notes/rules/: __init__.py  anki_specific.py  html.py  nbsps.py  numbers.py
french_typo/: __init__.py  cli.py
french_typo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
french_typo/adapters/anki/: formatter.py  rules.py
french_typo/adapters/asciidoc/: formatter.py  rules.py
french_typo/core/: formatter.py  profiles.py
french_typo/core/rules/: __init__.py  multiple_spaces.py  nbsps.py  units.py  useless_spaces.py
tests/: test_anki_specific.py  test_browser_format.py  test_editor_button.py  test_editor_format.py  test_format_anki_notes.py  test_logger.py  test_main.py  test_multiple_spaces.py  test_nbsps.py  test_numbers.py  test_units.py
tests/adapters/anki/: test_anki_nbsp.py
tests/adapters/asciidoc/: test_lists.py
tests/core/: test_formatter.py  test_nbsps.py  test_numbers.py  test_spaces.py  test_units.py  test_useless_spaces.py
tests/format_anki_notes/: test_browser_menu.py
tests/rules/: test_multiple_spaces.py  test_nbsps.py  test_units.py
