[project]
name = "french-typo"
dynamic = ["version"]
description = "Moteur agnostique de correction typographique française"
requires-python = ">=3.8"
readme = { file = "README.adoc", content-type = "text/asciidoc" }
license = { text = "MIT" }

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
