[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "french-typo"
version = "0.2.0"
description = "Moteur de correction typographique française"
readme = { file = "README.adoc", content-type = "text/plain" }
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.scripts]
french-typo = "french_typo.cli:fix"

[tool.setuptools.packages.find]
where = ["."]
include = ["french_typo*"]
exclude = ["format_anki_notes*", "tests*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "angular"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
